# oaipmh

./: .envrc  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  HISTORY.txt  LICENSE  README.md  flake.nix  pyproject.toml
.github/: dependabot.yml
.github/actions/setup-nix-cache/: action.yml
.github/actions/setup-uv-cache/: action.yml
.github/workflows/: ci.yml  publish.yml
flake/: devshells.nix  pre-commit.nix  python-axis.nix  treefmt.nix
src/oaipmh/: client.py  common.py  datestamp.py  error.py  interfaces.py  metadata.py  server.py  validation.py
src/oaipmh/tests/: fakeclient.py  fakeserver.py  test_broken.py  test_client.py  test_datestamp.py  test_deleted_records.py  test_retry.py  test_server.py  test_validation.py
