[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oaipmh"
version = "3.1.0"
description = "Python implementation of the Open Archives Initiative Protocol for Metadata Harvesting (OAI-PMH)"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [
    { name = "Infrae", email = "info@infrae.com" },
]
maintainers = [
    { name = "Jaime Cardozo", email = "jaime.cardozo@library.ethz.ch" },
    { name = "ETH Library — Data Science and Research Support", email = "dsr@library.ethz.ch" },
]
dependencies = ["lxml"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: BSD License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Web Environment",
]
keywords = ["OAI-PMH", "xml", "archive", "metadata", "harvesting"]

[project.urls]
Repository = "https://github.com/eth-library/oaipmh"
Original-Repository = "https://github.com/infrae/pyoai"
Changelog = "https://github.com/eth-library/oaipmh/blob/main/CHANGELOG.md"
Issues = "https://github.com/eth-library/oaipmh/issues"

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["src/oaipmh/tests"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.ruff.lint.per-file-ignores]
# Modernisation / formatting rewrites are deferred to Phase B so the Phase A
# commit stays small enough to be reviewed line-by-line and does not pollute
# `git blame` for src/oaipmh/. Phase B's bulk pass will land them in one
# commit whose SHA is appended to `.git-blame-ignore-revs`. See
# `docs/specs/ruff-precommit-adoption.md` decision log (2026-04-25).
"src/oaipmh/*.py" = [
    "E713",   # not-in-test (membership) — mechanical rewrite
    "I001",   # unsorted-imports — handled by Phase B's `ruff check --fix`
    "UP004",  # useless-object-inheritance (class X(object) → class X)
    "UP008",  # super-call-with-parameters (super(Cls, self) → super())
    "UP010"  ,# unnecessary-future-import
    "UP015",  # redundant-open-modes
    "UP031",  # printf-string-formatting (defensive; not currently firing)
]
# Tests are exempt from semantic edits in Phase A (spec §Scope). The list
# below covers rules currently firing on the test tree plus rules that
# previously fired during exploratory edits — kept defensively so a future
# refactor doesn't trip Phase A's gate. Phase B / a later cleanup slug can
# shrink this set.
"src/oaipmh/tests/*" = [
    "B007",   # unused-loop-control-variable
    "B904",   # raise-without-from-inside-except
    "E402",   # module-import-not-at-top-of-file (test fixtures import after sys.path mangling)
    "F401",   # unused-import
    "F402",   # import-shadowed-by-loop-var
    "F841",   # unused-variable
    "I001",   # unsorted-imports
    "SIM103", # needless-bool
    "SIM113", # enumerate-for-loop
    "SIM115", # open-file-with-context-handler
    "SIM117", # multiple-with-statements
    "UP004",  # useless-object-inheritance
    "UP015",  # redundant-open-modes
    "UP031",  # printf-string-formatting (deferred with src counterparts)
]

[tool.hatch.build.targets.wheel]
packages = ["src/oaipmh"]
exclude = [
    "src/oaipmh/tests",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/oaipmh",
    "pyproject.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
]
exclude = [
    "src/oaipmh/tests",
]
